--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import BlogPreview from "../components/BlogPreview.astro";
 import Contact from "../components/Contact.astro";
 import FAQ from "../components/FAQ.astro";
 import Hero from "../components/Hero.astro";
@@ -16,6 +17,7 @@ import Layout from "../layouts/Layout.astro";
   <Products />
   <Process />
   <TechStack />
+  <BlogPreview />
   <Team />
   <FAQ />
   <Contact />
