feat: Add Yandex verification HTML file and update product and layout descriptions for clarity

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -64,7 +64,7 @@ const getIcon = (iconName: string) => {
                 />
               </div>
               <div class="contact-details">
-                <h4 class="contact-item-title">{contact.title}</h4>
+                <strong class="contact-item-title">{contact.title}</strong>
                 {contact.link ? (
                   <a
                     href={contact.link}
