--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -94,7 +94,7 @@ const currentYear = new Date().getFullYear();
             class="footer-link footer-link-hover"
             aria-label="Политика конфиденциальности"
           >
-            Политика конфиденциальности
+            Политика
           </a>
         </div>
       </div>
